# serializer version: 1
# name: test_snapshot
  dict({
    'control': dict({
      'bowls': dict({
        'settings': list([
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 0,
          }),
          dict({
            'food_type': <FoodType.DRY: 2>,
            'target': 0,
          }),
        ]),
        'type': <BowlType.TWO_SMALL: 4>,
      }),
      'fast_polling': False,
      'lid': dict({
        'close_delay': <CloseDelay.FASTER: 0>,
      }),
      'tags': list([
        dict({
          'created_at': datetime.datetime(2023, 10, 1, 14, 34, 49, tzinfo=TzInfo(UTC)),
          'device_id': 269654,
          'id': 60978,
          'index': 1,
          'profile': 2,
          'updated_at': datetime.datetime(2023, 10, 1, 14, 34, 49, tzinfo=TzInfo(UTC)),
          'version': 0,
        }),
      ]),
      'tare': 2,
      'training_mode': <FeederTrainingMode.DISABLED: 0>,
    }),
    'entity_info': dict({
      'household_id': 222527,
      'id': 269654,
      'name': 'Maui matlåda (old) ',
      'product_id': 4,
    }),
    'status': dict({
      'battery': 5.046,
      'bowl_status': list([
        dict({
          'current_weight': 32.16,
          'fill_percent': 100,
          'food_type': <FoodType.WET: 1>,
          'last_fill_weight': 32.16,
          'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(UTC)),
          'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(UTC)),
          'position': <BowlPosition.LEFT: 0>,
          'substance_type': 2,
        }),
        dict({
          'current_weight': -27.2,
          'food_type': <FoodType.WET: 1>,
          'last_fill_weight': -27.2,
          'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(UTC)),
          'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(UTC)),
          'position': <BowlPosition.RIGHT: 1>,
          'substance_type': 2,
        }),
      ]),
      'learn_mode': False,
      'online': True,
      'signal': dict({
        'device_rssi': -79,
      }),
      'version': dict({
        'device': dict({
          'firmware': '406.437',
          'hardware': '9',
        }),
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
# name: test_snapshot.1
  dict({
    'control': dict({
      'bowls': dict({
        'settings': list([
          dict({
            'food_type': <FoodType.DRY: 2>,
            'target': 65,
          }),
        ]),
        'type': <BowlType.LARGE_BOWL: 1>,
      }),
      'fast_polling': True,
      'lid': dict({
        'close_delay': <CloseDelay.FASTER: 0>,
      }),
      'tags': list([
        dict({
          'created_at': datetime.datetime(2025, 8, 20, 16, 3, 55, tzinfo=TzInfo(UTC)),
          'device_id': 1187564,
          'id': 1725064,
          'index': 1,
          'profile': 2,
          'updated_at': datetime.datetime(2025, 8, 20, 16, 3, 55, tzinfo=TzInfo(UTC)),
          'version': 1,
        }),
      ]),
      'training_mode': <FeederTrainingMode.DISABLED: 0>,
    }),
    'entity_info': dict({
      'household_id': 287000,
      'id': 1187564,
      'name': 'Cat with only one Bowl',
      'parent_device_id': 1204444,
      'product_id': 4,
    }),
    'status': dict({
      'battery': 6.11,
      'bowl_status': list([
        dict({
          'current_weight': -40.34,
          'food_type': <FoodType.DRY: 2>,
          'last_fill_weight': -22.73,
          'last_filled_at': datetime.datetime(2025, 9, 11, 7, 29, 36, tzinfo=TzInfo(UTC)),
          'last_zeroed_at': datetime.datetime(2025, 8, 20, 16, 4, 37, tzinfo=TzInfo(UTC)),
          'position': <BowlPosition.LEFT: 0>,
          'substance_type': 2,
        }),
        dict({
          'current_weight': 0.0,
          'food_type': <FoodType.UNKNOWN: -1>,
          'last_fill_weight': 0.0,
          'last_filled_at': datetime.datetime(2025, 9, 11, 7, 29, 36, tzinfo=TzInfo(UTC)),
          'last_zeroed_at': datetime.datetime(2025, 8, 20, 16, 4, 37, tzinfo=TzInfo(UTC)),
          'position': <BowlPosition.RIGHT: 1>,
          'substance_type': 2,
        }),
      ]),
      'learn_mode': False,
      'online': True,
      'signal': dict({
        'device_rssi': -64,
      }),
      'version': dict({
        'device': dict({
          'firmware': '406.437',
          'hardware': '12',
        }),
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
# name: test_snapshot_set_bowls_command
  dict({
    'control': dict({
      'bowls': dict({
        'settings': list([
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 50,
          }),
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 100,
          }),
        ]),
        'type': <BowlType.TWO_SMALL: 4>,
      }),
      'fast_polling': False,
      'lid': dict({
        'close_delay': <CloseDelay.SLOWER: 20>,
      }),
      'training_mode': <FeederTrainingMode.STEP_1: 1>,
    }),
    'entity_info': dict({
      'household_id': 222527,
      'id': 269654,
      'name': 'Maui matlåda (old) ',
      'product_id': 4,
    }),
    'status': dict({
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
